--- a/index.html
+++ b/index.html
@@ -1,1 +1,170 @@
-<!DOCTYPE html><html lang="en"><head>    <meta charset="UTF-8">    <meta name="viewport" content="width=device-width, initial-scale=1.0">    <title>PatGen Exchange</title>    <style>body {    font-family: Arial, sans-serif;    margin: 0;    padding: 0;    background-color: #f5f5f5;    color: #000;}header {    background-color: #00004d;    color: #fff;    padding: 15px;}.header-container {    display: flex;    justify-content: space-between;    align-items: center;}.hamburger-menu {    font-size: 24px;    cursor: pointer;}nav {    display: none;    background-color: #00004d;}nav ul {    list-style: none;    padding: 0;    margin: 0;}nav ul li {    padding: 10px;    border-bottom: 1px solid #fff;}nav ul li a {    color: #fff;    text-decoration: none;}main {    padding: 20px;    text-align: center;}h2 {    margin-bottom: 20px;    font-size: 18px;    color: #00004d;}.exchanger-grid {    display: flex;    flex-wrap: wrap;    justify-content: space-around;    gap: 20px;}.exchanger-card {    background-color: #fff;    border: 1px solid #ccc;    border-radius: 8px;    padding: 20px;    width: 100%;    max-width: 300px;    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);    text-align: left;}.exchanger-card h3 {    margin: 0;    font-size: 20px;    color: #00004d;}.exchanger-card p {    margin: 10px 0;    font-size: 14px;}.status {    margin-top: 10px;    padding: 5px;    text-align: center;    font-weight: bold;    color: #fff;    border-radius: 4px;}.online {    background-color: #28a745;}.offline {    background-color: #dc3545;}.confirm-button {    display: block;    width: 100%;    padding: 10px;    margin-top: 10px;    background-color: #00004d;    color: #fff;    border: none;    border-radius: 4px;    cursor: pointer;    text-align: center;    font-size: 16px;}.confirm-button:hover {    background-color: #000066;}footer {    background-color: #00004d;    color: #fff;    padding: 15px;    text-align: center;}footer ul {    list-style: none;    padding: 0;    margin: 0;}footer ul li {    margin: 10px 0;}footer ul li a {    color: #fff;    text-decoration: none;}footer p {    margin-top: 20px;}/* Modal styles */.modal {    display: none;    position: fixed;    z-index: 1000;    left: 0;    top: 0;    width: 100%;    height: 100%;    overflow: auto;    background-color: rgba(0, 0, 0, 0.5);    justify-content: center;    align-items: center;}.modal-content {    background-color: #fff;    margin: auto;    padding: 20px;    border: 1px solid #888;    width: 80%;    max-width: 400px;    text-align: center;    border-radius: 8px;}.modal-content h3 {    margin-bottom: 20px;    color: #00004d;}.modal-content .modal-button {    padding: 10px 20px;    background-color: #00004d;    color: #fff;    border: none;    border-radius: 4px;    cursor: pointer;    text-decoration: none;}.modal-content .modal-button:hover {    background-color: #000066;}</style></head><body>    <header>        <div class="header-container">            <div class="brand">PatGen Exchange</div>            <div class="hamburger-menu" onclick="toggleMenu()">☰</div>        </div>        <nav id="menu">            <ul>                <li><a href="#">Buy and Sell</a></li>                <li><a href="#">My Transactions</a></li>                <li><a href="#">Manage Orders</a></li>                <li><a href="#">Contact Support</a></li>            </ul>        </nav>    </header>    <main>        <h2>Make a Transfer of 10,000 Naira to any of the Exchangers below. Transactions are faster if the exchanger is online</h2>        <div class="exchanger-grid">            <div class="exchanger-card">                <h3>Business Varsity Exchange</h3>                <p><strong>Account Name:</strong> John Doe</p>                <p><strong>Account Number:</strong> 1234567890</p>                <p><strong>Bank:</strong> First Bank</p>                <div class="status online">Online</div>                <button class="confirm-button" onclick="showModal()">Confirm Payment</button>            </div>            <div class="exchanger-card">                <h3>Business Varsity Exchange</h3>                <p><strong>Account Name:</strong> Jane Smith</p>                <p><strong>Account Number:</strong> 0987654321</p>                <p><strong>Bank:</strong> Access Bank</p>                <div class="status offline">Offline</div>                <button class="confirm-button" onclick="showModal()">Confirm Payment</button>            </div>            <div class="exchanger-card">                <h3>Business Varsity Exchange</h3>                <p><strong>Account Name:</strong> Chris Johnson</p>                <p><strong>Account Number:</strong> 1122334455</p>                <p><strong>Bank:</strong> GTBank</p>                <div class="status online">Online</div>                <button class="confirm-button" onclick="showModal()">Confirm Payment</button>            </div>        </div>    </main>    <footer>        <ul>            <li><a href="#">Report Transaction</a></li>            <li><a href="#">Contact Support</a></li>            <li><a href="#">Become an Exchanger</a></li>        </ul>        <p>PatGen Exchange - Fast like Flash</p>    </footer>    <!-- Modal -->    <div id="orderModal" class="modal">        <div class="modal-content">            <h3>#Order Processing</h3>            <a href="#" class="modal-button">View transactions</a>        </div>    </div>    <script>function toggleMenu() {    const menu = document.getElementById('menu');    menu.style.display = menu.style.display === 'block' ? 'none' : 'block';}function showModal() {    const modal = document.getElementById('orderModal');    modal.style.display = 'flex';}// Close modal when clicking outside of itwindow.onclick = function(event) {    const modal = document.getElementById('orderModal');    if (event.target == modal) {        modal.style.display = 'none';    }}</script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Phone Number Duplicates Checker</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+      color: #ffffff;
+      margin: 0;
+      padding: 20px;
+    }
+
+    h2, h3 {
+      text-align: center;
+      color: #00bfff;
+    }
+
+    form {
+      max-width: 800px;
+      margin: auto;
+      background: #111;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px #00bfff33;
+    }
+
+    textarea {
+      width: 100%;
+      height: 150px;
+      border: 1px solid #00bfff;
+      border-radius: 8px;
+      padding: 10px;
+      background: #000;
+      color: #fff;
+      resize: vertical;
+    }
+
+    button {
+      background: linear-gradient(to right, #00bfff, #007acc);
+      color: white;
+      border: none;
+      padding: 12px 25px;
+      border-radius: 30px;
+      font-size: 16px;
+      margin: 10px 5px 0 0;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      box-shadow: 0 4px 10px rgba(0, 191, 255, 0.3);
+    }
+
+    button:hover {
+      background: linear-gradient(to right, #007acc, #00bfff);
+      box-shadow: 0 0 15px rgba(0, 191, 255, 0.8);
+    }
+
+    .info {
+      text-align: center;
+      margin-top: 15px;
+      font-size: 18px;
+      color: #00ffcc;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 20px;
+      background: #111;
+      border-radius: 10px;
+      overflow: hidden;
+    }
+
+    th, td {
+      border: 1px solid #00bfff;
+      padding: 10px;
+      text-align: left;
+      color: #fff;
+    }
+
+    th {
+      background-color: #007acc;
+    }
+
+    #duplicateTableContainer {
+      max-width: 800px;
+      margin: auto;
+    }
+
+    @media (max-width: 600px) {
+      textarea {
+        height: 120px;
+      }
+      button {
+        width: 100%;
+        margin-bottom: 10px;
+      }
+    }
+  </style>
+</head>
+<body>
+<h1 style="text-align:center;">DAC TEAM</h1>
+<h2>Phone Number Duplicate Checker</h2>
+
+<form id="phoneForm" onsubmit="return false;">
+  <label for="mynos">Paste Phone Numbers (comma separated):</label><br>
+  <textarea id="mynos" placeholder="Enter phone numbers separated by commas..."></textarea><br>
+  <div style="text-align: center;">
+    <button onclick="checkDuplicates()">Check for Duplicates</button>
+    <button onclick="resolveDuplicates()">Resolve Duplicates</button>
+  </div>
+</form>
+
+<div class="info">
+  <p><strong>Total Numbers:</strong> <span id="totalCount">0</span></p>
+</div>
+
+<div id="duplicateTableContainer"></div>
+
+<script>
+function checkDuplicates() {
+  let inputField = document.getElementById("mynos");
+  let rawNumbers = inputField.value;
+  let cleaned = rawNumbers.replace(/\u200E/g, "").trim();
+
+  let numbers = cleaned.split(",").map(num => num.trim()).filter(num => num !== "");
+  let seen = {};
+  let duplicates = {};
+
+  numbers.forEach(num => {
+    seen[num] = (seen[num] || 0) + 1;
+    if (seen[num] > 1) {
+      duplicates[num] = seen[num];
+    }
+  });
+
+  document.getElementById("totalCount").innerText = numbers.length;
+
+  let tableHTML = "<h3>Duplicate Numbers</h3>";
+  if (Object.keys(duplicates).length > 0) {
+    tableHTML += "<table><tr><th>Phone Number</th><th>Count</th></tr>";
+    for (let num in duplicates) {
+      tableHTML += `<tr><td>${num}</td><td>${duplicates[num]}</td></tr>`;
+    }
+    tableHTML += "</table>";
+  } else {
+    tableHTML += "<p style='color:lightgreen;'>No duplicates found.</p>";
+  }
+
+  document.getElementById("duplicateTableContainer").innerHTML = tableHTML;
+}
+
+function resolveDuplicates() {
+  let inputField = document.getElementById("mynos");
+  let rawNumbers = inputField.value;
+  let cleaned = rawNumbers.replace(/\u200E/g, "").trim();
+
+  let numbers = cleaned.split(",").map(num => num.trim()).filter(num => num !== "");
+  let uniqueNumbers = [...new Set(numbers)];
+
+  inputField.value = uniqueNumbers.join(", ");
+  alert("Duplicates removed. Only unique numbers remain.");
+
+  checkDuplicates();
+}
+</script>
+
+</body>
+</html>
